--- a/templates/book/buyedBookEmail.html.twig
+++ b/templates/book/buyedBookEmail.html.twig
@@ -7,7 +7,7 @@
 <body>
     <p>{{ 'book.buyed.hello'|trans }}</p>
     <p>{{ 'book.buyed.email.p'|trans|raw }}</p>
-    {% if free %}
+    {% if free is defined %}
         <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token, 'free': 1}) }}">{{ 'downloadBook'|trans }}</a>
     {% else %}
         <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token}) }}">{{ 'downloadBook'|trans }}</a>
