--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -69,7 +69,6 @@
                                 {% endif %}
                             </form>
                         {% endif %}
-                        {% set promoCode = app.request.get('promoCode') %}
                         <div class="modal fade" id="{{"exampleModal" ~ book.id }}" tabindex="-1" aria-labelledby="{{ "exampleModalLabel" ~ book.id }}" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
@@ -77,7 +76,7 @@
                                         <h5 class="modal-title" id="exampleModalLabel"></h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <form action="{{ path('app_download_free', {'id': book.id, 'promoCode': promoCode}) }}">
+                                    <form action="{{ path('app_download_free', {'id': book.id,}) }}">
                                         <div class="modal-body">
                                             <div class="d-flex flex-column align-items-center">
                                                 <div class="mt-3 form-field d-flex flex-column">
@@ -92,6 +91,7 @@
                                                     <label for="name">{{ 'book.index.lastName'|trans }}</label>
                                                     <input type="text" name="name" id="name" class="rounded" required>
                                                 </div>
+                                                <input type="hidden" name="promoCode" value="{{ app.request.get(('promoCode'))}}">
                                             </div>
                                         </div>
                                         <div class="modal-footer">
@@ -122,12 +122,12 @@
     </div>
 {% endblock %}
 {% block script %}
-    {% if app.request.get('promoCode') %}
+    {% if app.request.get('book') %}
         <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             $(document).ready(function() {
-                $('#exampleModal').modal('show');
+                $('#exampleModal' + {{ app.request.get('book') }}).modal('show');
             });
         </script>
     {% endif %}
