--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
             <div class="top d-flex">
                 <div class="left text-white d-flex flex-column">
                     <h2 class="mx-4 mt-4 fs-2">{{ 'home.presentaion.head.title'|trans }}</h2>
-                    <h3 class="mx-4 my-4 fs-5 lh-sm">{{ 'home.presentation.head.text'|trans }}</h3>
+                    <h3 class="mx-4 my-4 fs-5 lh-sm">{{ 'home.presentation.head.text'|trans|raw }}</h3>
                 </div>
                 <div class="right">
 
