--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -29,7 +29,7 @@
                 {{ form_errors(form.lastName) }}
             </div>
             <div class="d-flex flex-column mt-3">
-                {{ form_label(form.email, 'contact.form.Email'|trans) }}
+                {{ form_label(form.email, 'contact.form.emailFr'|trans) }}
                 {{ form_widget(form.email) }}
                 {{ form_errors(form.email) }}
             </div>
