--- a/templates/contact/workshopContact.html.twig
+++ b/templates/contact/workshopContact.html.twig
@@ -26,7 +26,7 @@
                 {{ form_errors(form.lastName) }}
             </div>
             <div class="d-flex flex-column mt-3">
-                {{ form_label(form.email, 'Email') }}
+                {{ form_label(form.email, 'emailFr') }}
                 {{ form_widget(form.email) }}
                 {{ form_errors(form.email) }}
             </div>
