--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -6,7 +6,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Email</th>
+                <th>emailFr</th>
                 <th></th>
             </tr>
         </thead>
