--- a/templates/book/_form.html.twig
+++ b/templates/book/_form.html.twig
@@ -100,6 +100,27 @@
     </div>
 </div>
 <div class="d-flex justify-content-center">
+    <div class="d-flex flex-column mt-5">
+        {{ form_label(form.emailFr, 'Email français') }}
+        {{ form_widget(form.emailFr) }}
+        {{ form_errors(form.emailFr) }}
+    </div>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="d-flex flex-column mt-5">
+        {{ form_label(form.emailEs, 'Email espagnol') }}
+        {{ form_widget(form.emailEs) }}
+        {{ form_errors(form.emailEs) }}
+    </div>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="d-flex flex-column mt-5">
+        {{ form_label(form.emailEt, 'Email estonien') }}
+        {{ form_widget(form.emailEt) }}
+        {{ form_errors(form.emailEt) }}
+    </div>
+</div>
+<div class="d-flex justify-content-center">
     <button class="btn btn-secondary text-white mt-5 px-3">{{ button_label|default('Sauvegarder') }}</button>
 </div>
 {{ form_end(form) }}
