--- a/templates/book/buyedBookEmail.html.twig
+++ b/templates/book/buyedBookEmail.html.twig
@@ -5,13 +5,21 @@
     <title></title>
 </head>
 <body>
-    <p>{{ 'book.buyed.hello'|trans }}</p>
-    <p>{{ 'book.buyed.email.p'|trans|raw }}</p>
+{% if lang == 'fr' %}
+    <p class="">{{ book.emailFr|nl2br }}</p>
+    {% elseif lang == 'es' %}
+    <p class="">{{ book.emailEs|nl2br }}</p>
+    {% else %}
+    <p class="">{{ book.emailEt|nl2br }}</p>
+{% endif %}
+
+{#    <p>{{ 'book.buyed.hello'|trans }}</p>#}
+{#    <p>{{ 'book.buyed.email.p'|trans|raw }}</p>#}
     {% if free is defined %}
         <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token, 'free': 1}) }}">{{ 'downloadBook'|trans }}</a>
     {% else %}
         <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token}) }}">{{ 'downloadBook'|trans }}</a>
     {% endif %}
-    <p>{{ 'book.buyed.email.p.end'|trans|raw }}</p>
+    <p class="fs-6">{{ 'book.buyed.email.p.end'|trans|raw }}</p>
 </body>
 </html>
