--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,6 +2,6 @@
 
 <p>
     Comfirmer l'inscription en cliquant sur le lien en dessous <br><br>
-    <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
+    <a href="{{ signedUrl|raw }}">Confirm my emailFr</a>.
     Ce lien expirera dans : {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
