--- a/templates/_include/_footer.html.twig
+++ b/templates/_include/_footer.html.twig
@@ -3,7 +3,7 @@
     <div class="footer bg-primary d-flex text-white align-items-center justify-content-around">
         <div class="d-flex flex-column flex-md-row align-items-md-center ms-2 ms-md-5">
             <div class="d-flex flex-column">
-                <p class="">emailFr:<br>fabimage.coach@gmail.com</p>
+                <p class="">email:<br>fabimage.coach@gmail.com</p>
                 <p class="mb-1">FABIMAGE OÜ<br>Reg nr: 14768242</p>
                 <div>
                     <a href="https://www.facebook.com/FabimageCoach"><img src="{{ asset('build/images/icons8-facebook-50.png') }}" alt=""></a>
