--- a/templates/contact/serviceContactEmail.html.twig
+++ b/templates/contact/serviceContactEmail.html.twig
@@ -8,7 +8,7 @@
     <h3>Un.e {{ form.client }}, vous a envoyé une {{ form.type }}</h3>
     <p>Nom: {{ form.lastName }}</p>
     <p>Prénom: {{ form.firstName }}</p>
-    <p>emailFr : {{ form.email }}</p>
+    <p>email : {{ form.email }}</p>
     <p>Numéro de téléphone : {{ form.phoneNumber }}</p>
     {% if form.agreements %}
         <p>{{ form.firstName }} {{ form.lastName }} ne souhaite pas recevoir des nouvelles ou offres.</p>
