--- a/templates/giftCard/giftCardEmail.html.twig
+++ b/templates/giftCard/giftCardEmail.html.twig
@@ -8,7 +8,7 @@
 <h3>{{ form.name }} Souhaite acheter une carte cadeau</h3>
 <p>Nom: {{ form.name }}</p>
 <p>prestation : {{ form.type }}</p>
-<p>emailFr : {{ form.email }}</p>
+<p>email : {{ form.email }}</p>
 <p>Numéro de téléphone : {{ form.phoneNumber }}</p>
 {% if form.postalCode %}
     <p>adresse : {{ form.postalCode }}</p>
