--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password Reset emailFr Sent{% endblock %}
+{% block title %}Password Reset email Sent{% endblock %}
 
 {% block body %}
     <div class="w-50 mx-auto">
