--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -30,3 +30,6 @@
 @import "_tariffIndex.scss";
 @import "_cardBook.scss";
 @import "_bookShow.scss";
+@import "_articleForm.scss";
+@import "_articleIndex.scss";
+@import "_articleShow.scss";
