--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -31,4 +31,5 @@
             </div>
         {% endif %}
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
