--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -141,4 +141,5 @@
             </div>
         {% endif %}
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
