--- a/templates/presentation/company.html.twig
+++ b/templates/presentation/company.html.twig
@@ -76,4 +76,5 @@
             </div>
         </div>
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
