--- a/templates/workshop/index.html.twig
+++ b/templates/workshop/index.html.twig
@@ -32,6 +32,6 @@
                 </a>
             </div>
         {% endif %}
-
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
