--- a/templates/presentation/fabienne.html.twig
+++ b/templates/presentation/fabienne.html.twig
@@ -39,4 +39,5 @@
             </div>
         </div>
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
