--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -51,4 +51,5 @@
             </div>
         </div>
     </div>
+    {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
