--- a/templates/book/_form.html.twig
+++ b/templates/book/_form.html.twig
@@ -52,7 +52,7 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
     <div class="d-flex flex-column">
-        {{ form_label(form.videoPassword, 'mot de passe de la vidéo') }}
+        {{ form_label(form.videoPassword, 'Mot de passe de la vidéo') }}
         {{ form_widget(form.videoPassword) }}
         {{ form_errors(form.videoPassword) }}
     </div>
