add multiple email sent after book are buyed

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -33,4 +33,6 @@
 @import "_articleForm.scss";
 @import "_articleIndex.scss";
 @import "_articleShow.scss";
-@import "_actuality.scss"
+@import "_actuality.scss";
+@import "_followUpEmailForm.scss";
+@import "_followUpEmailIndex.scss";
