--- a/templates/commentary/edit.html.twig
+++ b/templates/commentary/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="commentary-form">
-        <h1 class="text-primary text-center mb-3">Mettre a jour le Commentaire</h1>
+        <h1 class="text-primary text-center mb-3">Mettre a jour le commentaire</h1>
         {% if error %}
             <p class="text-center"> vous devez remplir tous les champs</p>
         {% endif %}
