--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,12 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="{{ asset('build/images/favicon.ico') }}">
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ importmap() }}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
