--- a/templates/book/downloadBookEmail.html.twig
+++ b/templates/book/downloadBookEmail.html.twig
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<h3>{{ firstName }} {{ nom }} a téléchargé {{ book }}</h3>
+<h3>{{ firstName }} a téléchargé {{ book }}</h3>
 <p>email: {{ email }}</p>
 </body>
 </html>
