--- a/templates/follow_up_email/_form.html.twig
+++ b/templates/follow_up_email/_form.html.twig
@@ -18,7 +18,7 @@
 </div>
 <div class="d-flex justify content-center sendAfter-container">
     <div class="mx-auto mt-3">
-        {{ form_label(form.sendAfter, 'Envoyé après :') }}
+        {{ form_label(form.sendAfter, 'Envoyer après :') }}
         <div class="widget d-flex flex-row">
             {{ form_widget(form.sendAfter) }}
                 <p class="mb-0 ms-2 sendAfter-days">jours</p>
