--- a/templates/follow_up_email/new.html.twig
+++ b/templates/follow_up_email/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="followUpEmail-form mb-3">
-    <h1 class="text-center text-primary">Créer un nouvelle email</h1>
+    <h1 class="text-center text-primary">Créer un nouvel email</h1>
     {% if error %}
     <p class="text-center"> vous devez remplir tous les champs</p>
     {% endif %}
