--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -5,13 +5,15 @@
 
 {% block body %}
 <div class="book-show">
-    <div class="top-container">
-        <div class="title-image-container">
-            <img src="{{ asset('build/images/Fabienne-EBOOKS.jpg') }}" alt="" class="w-100 h-100">
-        </div>
-        <div class="head-text-container mx-auto bg-light">
-            <h1 class="text-primary fs-2">{{ 'book.index.h1'|trans }}</h1>
-        </div>
+    <div class="mx-4">
+            {% if app.request.locale == 'fr' %}
+                <h1 class="fw-bold text-center fs-1 text-primary">{{ book.nameFr }}</h1>
+            {% elseif app.request.locale == 'es' %}
+                <h1 class="fw-bold text-center fs-1 text-primary">{{ book.nameEs }}</h1>
+            {% elseif app.request.locale == 'et' %}
+                <h1 class="fw-bold text-center fs-1 text-primary">{{ book.nameEt }}</h1>
+            {% endif %}
+        </h1>
     </div>
     {% if error %}
         <p class="buyed-text mx-auto optional-message">{{ 'book.index.error'|trans|raw }}</p>
@@ -75,10 +77,6 @@
                                         <div class="mt-3 form-field d-flex flex-column">
                                             <label for="firstName">{{'book.index.firstName'|trans}}</label>
                                             <input type="text" name="firstName" id="firstName" class="rounded" required>
-                                        </div>
-                                        <div class="mt-3 form-field d-flex flex-column">
-                                            <label for="name">{{ 'book.index.lastName'|trans }}</label>
-                                            <input type="text" name="name" id="name" class="rounded" required>
                                         </div>
                                         <input type="hidden" name="promoCode" value="{{ app.request.get(('promoCode'))}}">
                                     </div>
