--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
     <div class="home">
         <img src="{{ asset('build/images/Fabienne-HOME.jpg') }}" alt="" class="w-100 img-start">
         <div class="d-flex flex-column justify-content-center align-items-center text-primary title-container mt-5 mx-auto">
-            <h1 class="text-center mx-4 mx-md-0">{{ 'home.title'|trans }}</h1>
+            <h1 class="text-center mx-4 mx-md-0 fs-1">{{ 'home.title'|trans }}</h1>
             <p class="fs-4 text-center mx-4 mx-md-0">{{ 'home.underTitle'|trans|raw }}</p>
         </div>
         <div class="d-flex justify-content-around flex-column flex-md-row align-items-center mt-4">
